mastodon/templates/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mastodon-redis
  labels:
    app: mastodon-redis
spec:
  selector:
    app: mastodon-redis
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
