mastodon/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mastodon
  labels:
    app: mastodon
spec:
  type: NodePort
  selector:
    app: mastodon
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
