mastodon/templates/streaming-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mastodon-streaming
  labels:
    app: mastodon-streaming
spec:
  selector:
    app: mastodon-streaming
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
