mastodon/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mastodon-ing
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20M"
    ingress.kubernetes.io/proxy-body-size: "20M"
spec:
  tls:
  - hosts:
    - wobscale.social
    secretName: wobscale-social-cert-2
  rules:
  - host: wobscale.social
    http:
      paths:
      - path: "/"
        backend:
          serviceName: mastodon
          servicePort: 80
      - path: "/api/v1/streaming"
        backend:
          serviceName: mastodon-streaming
          servicePort: 4000
